--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="104dp"
         android:onClick="tamamGoster"
         android:text="ss65.sayfa"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:id="@+id/btnUyg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="20dp"
         android:onClick="uyg4Goster"
         android:text="4.Uygulama"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,4 +55,40 @@
         app:layout_constraintTop_toBottomOf="@+id/button"
         tools:layout_height="wrap_content"
         tools:layout_width="wrap_content" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="137dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="168dp"
+        android:onClick="uyg8Goster"
+        android:text="8. UYGULAMA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.138"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="131dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="168dp"
+        android:onClick="uyg9Goster"
+        android:text="9. UYGULAMA "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="145dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="220dp"
+        android:onClick="uyg10Goster"
+        android:text="10.uygulama"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
